<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
	    android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:paddingTop="@dimen/scroll_padding"
		android:paddingBottom="@dimen/scroll_padding">
		<LinearLayout
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:padding="5dp">
			<TextView
			    android:id="@+id/name_label"
			    android:text="@string/name_label"
				style="@style/label" />
			<EditText
			    android:id="@+id/name_value"
			    android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:inputType="textCapWords|textAutoCorrect"
				android:layout_marginRight="@dimen/value_padding" />
		</LinearLayout>
		<LinearLayout
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:padding="5dp">
			<TextView
			    android:id="@+id/date_label"
			    android:text="@string/date_label"
				style="@style/label" />
			<DatePicker
			    android:id="@+id/date_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:calendarViewShown="false"
				android:paddingRight="@dimen/label_padding" />
		</LinearLayout>
		<LinearLayout
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:padding="5dp">
			<TextView
			    android:id="@+id/time_label"
			    android:text="@string/time_label"
				style="@style/label" />
			<TimePicker
			    android:id="@+id/time_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:paddingRight="@dimen/label_padding" />
		</LinearLayout>
		<LinearLayout
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:padding="5dp">
			<TextView
			    android:id="@+id/sport_label"
			    android:text="@string/sport_label"
				style="@style/label" />
			<EditText
			    android:id="@+id/sport_value"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:inputType="textCapWords|textAutoCorrect"
				android:layout_marginRight="@dimen/value_padding" />
		</LinearLayout>
		<LinearLayout
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:padding="5dp">
			<TextView
			    android:id="@+id/location_label"
			    android:text="@string/location_label"
				style="@style/label" />
			<EditText
			    android:id="@+id/location_value"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:inputType="textCapWords|textPostalAddress|textAutoCorrect"
				android:layout_marginRight="@dimen/value_padding"
				android:hint="@string/current_location" />
		</LinearLayout>
		<LinearLayout
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:padding="5dp"
			android:gravity="center">
			<fragment
			    android:id="@+id/location_map"
				android:layout_width="wrap_content"
				android:layout_height="300dp"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				class="com.google.android.gms.maps.MapFragment" />
		</LinearLayout>
		<LinearLayout
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:padding="5dp">
			<TextView
			    android:id="@+id/details_label"
			    android:text="@string/details_label"
				style="@style/label" />
			<EditText
			    android:id="@+id/details_value"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:inputType="textCapSentences|textMultiLine|textAutoCorrect"
				android:layout_marginRight="@dimen/value_padding" />
		</LinearLayout>
		<LinearLayout
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:padding="5dp"
			android:gravity="center">
			<Button
			    android:id="@+id/submit_button"
			    android:text="@string/new_game"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@drawable/burnt_button"
				style="@style/button_text" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>
