<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
	<LinearLayout
	  android:orientation="vertical"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:paddingTop="@dimen/scroll_padding"
	  android:paddingBottom="@dimen/scroll_padding" >
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
    		android:orientation="horizontal"
	        android:padding="5dp" >
	        <TextView
		        android:id="@+id/name_label"
		        android:text="@string/name_label"
		        style="@style/label" />
			<TextView
			    android:id="@+id/name_value"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		        android:layout_marginRight="@dimen/value_padding" />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
    		android:orientation="horizontal"
	        android:padding="5dp" >
	        <TextView
		        android:id="@+id/date_label"
		        android:text="@string/date_label"
		        style="@style/label"/>
			<TextView
			    android:id="@+id/date_value"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		        android:layout_marginRight="@dimen/value_padding" />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
    		android:orientation="horizontal"
	        android:padding="5dp" >
	        <TextView
		        android:id="@+id/time_label"
		        android:text="@string/time_label"
		        style="@style/label" />
			<TextView
			    android:id="@+id/time_value"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		        android:layout_marginRight="@dimen/value_padding" />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
    		android:orientation="horizontal"
	        android:padding="5dp" >
	        <TextView
	            android:id="@+id/sport_label"
	            android:text="@string/sport_label"
		        style="@style/label" />
			<TextView
			    android:id="@+id/sport_value"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		        android:layout_marginRight="@dimen/value_padding" />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
    		android:orientation="horizontal"
	        android:padding="5dp" >
	        <TextView
	            android:id="@+id/location_label"
	            android:text="@string/location_label"
		        style="@style/label" />
			<TextView
			    android:id="@+id/location_value"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		        android:layout_marginRight="@dimen/value_padding" />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
    		android:orientation="horizontal"
	        android:padding="5dp"
		    android:gravity="center" >
			<fragment
			    android:id="@+id/location_map"
			    android:layout_width="wrap_content"
			    android:layout_height="300dp"
		        android:layout_marginLeft="20dp"
		        android:layout_marginRight="20dp"
			    class="com.google.android.gms.maps.MapFragment" />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
    		android:orientation="horizontal"
	        android:padding="5dp" >
	        <TextView
		        android:id="@+id/details_label"
		        android:text="@string/details_label"
		        style="@style/label" />
			<TextView
			    android:id="@+id/details_value"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		        android:layout_marginRight="@dimen/value_padding" />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
    		android:orientation="horizontal"
	        android:padding="5dp" >
	        <TextView
		        android:id="@+id/host_label"
		        android:text="@string/host_label"
		        style="@style/label"/>
			<TextView
			    android:id="@+id/host_value"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		        android:layout_marginRight="@dimen/value_padding" />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
    		android:orientation="horizontal"
	        android:padding="5dp" >
	        <TextView
		        android:id="@+id/phone_label"
		        android:text="@string/phone_label"
		        style="@style/label" />
			<TextView
			    android:id="@+id/phone_value"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		        android:layout_marginRight="@dimen/value_padding" />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
    		android:orientation="horizontal"
	        android:padding="5dp" >
	        <TextView
		        android:id="@+id/attending_label"
		        android:text="@string/attending_label"
		        style="@style/label" />
			<TextView
			    android:id="@+id/attending_value"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
		        android:layout_marginRight="@dimen/value_padding" />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
    		android:orientation="horizontal"
	        android:padding="5dp"
		    android:gravity="center" >
		    <Button
		        android:id="@+id/attend_button"
		        android:text="@string/attend"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="attendEvent"
		        android:background="@drawable/burnt_button"
		        style="@style/button_text" />
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
    		android:orientation="horizontal"
	        android:padding="5dp"
		    android:gravity="center" >
		    <Button
		        android:id="@+id/delete_button"
		        android:text="@string/delete"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:onClick="deleteEvent"
		        android:background="@drawable/burnt_button"
		        style="@style/button_text" />
	    </LinearLayout>
	</LinearLayout>
</ScrollView>